--- a/about.html
+++ b/about.html
@@ -5,8 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
     <meta name="author" content="Savaryna Viktoriia IP-22">
-</head>
-<body>
     
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka" rel="stylesheet">
+</head>
+<body bgcolor ="#657166" link="lightgreen" vlink="lightblue" alink="pink">
+    <header>
+        <div>
+            <img src="images/logo.png" alt="logo">
+        </div>
+        <div>
+           <p><a href="index.html">Home</a></p>
+           <p><a href="about.html">About</a></p>
+           <p><a href="platforms.html">Platforms</a></p>
+           <p><a href="contact.html">Contact</a></p> 
+        </div>
+    </header>
+    <main>
+        <dt><h1 style="font-family: 'Fredoka', sans-serif;"><center>About us</center></h1>   
+        </dt>
+        <dd style="font-family: 'Fredoka', sans-serif;" align="center">Can you imagine life without music? <br>It`s impossible! 
+            Find out more about music in this website.<br>
+            Have fun!</dd>
+        <br>
+        <h2 style="font-family: 'Fredoka', sans-serif;"><center>The missions</center></h2>   
+        <ul><font size="5" style="font-family: 'Fredoka', sans-serif;">
+            <li>Music can help you concentrate and work better</li>
+            <li>Singing dissolves stress excellently</li>
+            <li>Babies can listen to music inside the womb</li>
+            <li>Music can give you a frisson</li>
+            <li>Beats that keep your heartbeats healthy</li></font>
+        </ul>
+    </main>
 </body>
 </html>
