--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,60 @@
     <title>Contact</title>
     <meta name="author" content="Savaryna Viktoriia IP-22">
 </head>
-<body>
-    
+<body bgcolor="#657160">
+    <header>
+        <div>
+            <img src="images/logo.png" alt="logo">
+        </div>
+        <div>
+           <p><a href="index.html">Home</a></p>
+           <p><a href="about.html">About</a></p>
+           <p><a href="platforms.html">Platforms</a></p>
+           <p><a href="contact.html">Contact</a></p> 
+        </div>
+    </header>
+    <main>
+        <table align="center" cellpadding = "25" cellspacing="15">
+            <colgroup>
+                <col style="width:100px"/><col/>
+            </colgroup>    
+            <thead>          
+                <tr align="center">
+                    <th colspan="4">Our team</th>
+                </tr>
+            </thead> 
+            <tbody>
+                <tr align="center" bgcolor="white">
+                    <td colspan="4">
+                        <img src="https://cdn-icons-png.flaticon.com/256/3135/3135789.png" width="100" alt="spotify">
+                        <p>Name Surname</p>
+                        <p>Position</p>
+                    </td>
+                </tr>
+                <tr align="center" bgcolor="white">
+                    <td>
+                        <img src="https://cdn-icons-png.flaticon.com/512/4140/4140071.png" width="100" alt="spotify">
+                        <p>Name Surname</p>
+                        <p>Position</p>
+                    </td>
+                    <td>
+                        <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSMuZEcYYN2YYO5WAmhmhwnSJo7JyPn5Q-eih8MdZnvGIAFXqS4" width="100" alt="spotify">
+                        <p>Name Surname</p>
+                        <p>Position</p>
+                    </td>
+                    <td>
+                        <img src="https://netsandturf.com/assets/images/team/user-1.png" width="100" alt="spotify">
+                        <p>Name Surname</p>
+                        <p>Position</p>
+                    </td>
+                    <td align="left">
+                        <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcS02jOWrcM7KCYuEgESmP2P6rJq_O0i2Zqw0QDIdTKf3AmZWk1H" width="100" alt="spotify">
+                        <p>Name Surname</p>
+                        <p>Position</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </main>
 </body>
 </html>
