--- a/index.html
+++ b/index.html
@@ -5,8 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music</title>
     <meta name="author" content="Savaryna Viktoriia IP-22">
+
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka" rel="stylesheet">
 </head>
-<body>
-    
+<body bgcolor ="#657166" link="lightgreen" vlink="lightblue" alink="pink">
+    <header>
+        <div>
+            <img src="images/logo.png" alt="logo">
+        </div>
+        <div>
+           <p><a href="index.html">Home</a></p>
+           <p><a href="about.html">About</a></p>
+           <p><a href="platforms.html">Platforms</a></p>
+           <p><a href="contact.html">Contact</a></p> 
+        </div>
+    </header>
+    <main>
+        <h1 style="font-family: 'Fredoka', sans-serif;"><b>Music</b></h1>
+        <p style="font-family: 'Fredoka', sans-serif;"><u>
+            Music is the art form that combines rhythm and sound to 
+            form a functional melodic line. Music itself transcends 
+            time, space, and cultures. Music can carry a mood 
+            without speaking any specific words.</u>
+        </p>
+        <font color="white" size="3"><i>It can also be 
+            captured and recorded in a written universal
+            language unique unto any other art form.</i>
+        </font>
+        <p>
+            <font size="5" align="center" style="font-family: 'Fredoka', sans-serif;"><center>Top genres</center>
+            </font>
+        </p>
+        <div>
+            <div>
+                <a href="https://i.scdn.co/image/ab67616d00001e0208f3e7a08eb03064e6eb0af7" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d00001e0208f3e7a08eb03064e6eb0af7"
+                    width="25%" height="25%"></a>
+                <font size="5" style="font-family: 'Fredoka', sans-serif;"><p><b>Pop</b></p></font>
+            </div>
+            <div>
+                <a href="https://i.scdn.co/image/ab67616d0000b273548260cbdb078bfb1dca0681" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b273548260cbdb078bfb1dca0681"
+                    width="20%" height="20%"></a>
+                <font size="5" style="font-family: 'Fredoka', sans-serif;"><p><b>Rock</b></p></font>
+            </div>
+            <div>
+                <a href="https://i.scdn.co/image/ab67706f000000020892a338216da10ae5a87e7b" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67706f000000020892a338216da10ae5a87e7b"
+                    width="300" height="300"></a>
+                <font size="5" style="font-family: 'Fredoka', sans-serif;"><p><b>Hip Pop</b></p></font>
+            </div>
+        </div>
+        <div>
+            <p>
+                <font size="5" align="center" color="white" style="font-family: 'Fredoka', sans-serif;"><center>Fascinating facts</center>
+                </font>
+            </p>
+            <ol><font size="5" style="font-family: 'Fredoka', sans-serif;" color="white">
+                <li type = "A">Music can help you concentrate and work better</li>
+                <li type = "a">Singing dissolves stress excellently</li>
+                <li type = "I">Babies can listen to music inside the womb</li>
+                <li type = "i">Music can give you a frisson</li>
+                <li>Beats that keep your heartbeats healthy</li></font>
+            </ol>
+        </div>
+    </main>
 </body>
 </html>
