--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
             <li>Music can give you a frisson</li>
             <li>Beats that keep your heartbeats healthy</li></font>
         </ul>
+    <a href="platforms.html#plats">Read about platforms</a>
     </main>
 </body>
 </html>
