--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Contact</title>
     <meta name="author" content="Savaryna Viktoriia IP-22">
 </head>
-<body bgcolor="#657160">
+<body bgcolor="#657160" link="lightgreen" vlink="lightblue" alink="pink">
     <header>
         <div>
             <img src="images/logo.png" alt="logo">
@@ -19,7 +19,7 @@
         </div>
     </header>
     <main>
-        <table align="center" cellpadding = "25" cellspacing="15">
+        <table align="left" cellpadding = "25" cellspacing="15">
             <colgroup>
                 <col style="width:100px"/><col/>
             </colgroup>    
@@ -36,7 +36,7 @@
                         <p>Position</p>
                     </td>
                 </tr>
-                <tr align="center" bgcolor="white">
+                <tr align="right" bgcolor="white">
                     <td>
                         <img src="https://cdn-icons-png.flaticon.com/512/4140/4140071.png" width="100" alt="spotify">
                         <p>Name Surname</p>
@@ -52,7 +52,7 @@
                         <p>Name Surname</p>
                         <p>Position</p>
                     </td>
-                    <td align="left">
+                    <td>
                         <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcS02jOWrcM7KCYuEgESmP2P6rJq_O0i2Zqw0QDIdTKf3AmZWk1H" width="100" alt="spotify">
                         <p>Name Surname</p>
                         <p>Position</p>
@@ -60,6 +60,9 @@
                 </tr>
             </tbody>
         </table>
+        <iframe name="Frame" scrolling="no" 
+        style="width:150px; height:300px; float:left; border:ridge 2px; margin-bottom: 10px"
+        src = "index.html"></iframe>
     </main>
 </body>
 </html>
