--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             captured and recorded in a written universal
             language unique unto any other art form.</i>
         </font>
+        <a href="#music"><p>Read about facts</p></a>
         <p>
             <font size="5" align="center" style="font-family: 'Fredoka', sans-serif;"><center>Top genres</center>
             </font>
@@ -57,10 +58,10 @@
             </div>
         </div>
         <div>
-            <p>
+            <p><a name="music">
                 <font size="5" align="center" color="white" style="font-family: 'Fredoka', sans-serif;"><center>Fascinating facts</center>
                 </font>
-            </p>
+            </a></p>
             <ol><font size="5" style="font-family: 'Fredoka', sans-serif;" color="white">
                 <li type = "A">Music can help you concentrate and work better</li>
                 <li type = "a">Singing dissolves stress excellently</li>
