--- a/platforms.html
+++ b/platforms.html
@@ -20,13 +20,13 @@
         </div>
     </header>
     <main>
-        <h1>Platforms</h1>
+        <a name="plats"><h1>Platforms</h1></a>
         <p style="font-family: 'Fredoka', sans-serif;">
             A type of streaming media service that focuses 
             primarily on music, and sometimes other forms of 
             digital audio content such as podcasts.
         </p>
-
+        
         <font size="5" align="center" color="white" style="font-family: 'Fredoka', sans-serif;">
             <center>Most popular</center></font>
         
