--- a/contact.html
+++ b/contact.html
@@ -40,28 +40,50 @@
                     <td>
                         <img src="https://cdn-icons-png.flaticon.com/512/4140/4140071.png" width="100" alt="spotify">
                         <p>Name Surname</p>
-                        <p>Position</p>
+                        <p>Position 1</p>
                     </td>
                     <td>
                         <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSMuZEcYYN2YYO5WAmhmhwnSJo7JyPn5Q-eih8MdZnvGIAFXqS4" width="100" alt="spotify">
                         <p>Name Surname</p>
-                        <p>Position</p>
+                        <p>Position 2</p>
                     </td>
                     <td>
                         <img src="https://netsandturf.com/assets/images/team/user-1.png" width="100" alt="spotify">
                         <p>Name Surname</p>
-                        <p>Position</p>
+                        <p>Position 3</p>
                     </td>
                     <td>
                         <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcS02jOWrcM7KCYuEgESmP2P6rJq_O0i2Zqw0QDIdTKf3AmZWk1H" width="100" alt="spotify">
                         <p>Name Surname</p>
-                        <p>Position</p>
+                        <p>Position 4</p>
+                    </td>
+                </tr>
+                <tr align="right" bgcolor="white">
+                    <td>
+                        <img src="https://cdn-icons-png.flaticon.com/512/4140/4140071.png" width="100" alt="spotify">
+                        <p>Name Surname</p>
+                        <p>Position 5</p>
+                    </td>
+                    <td>
+                        <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSMuZEcYYN2YYO5WAmhmhwnSJo7JyPn5Q-eih8MdZnvGIAFXqS4" width="100" alt="spotify">
+                        <p>Name Surname</p>
+                        <p>Position 6</p>
+                    </td>
+                    <td>
+                        <img src="https://netsandturf.com/assets/images/team/user-1.png" width="100" alt="spotify">
+                        <p>Name Surname</p>
+                        <p>Position 7</p>
+                    </td>
+                    <td>
+                        <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcS02jOWrcM7KCYuEgESmP2P6rJq_O0i2Zqw0QDIdTKf3AmZWk1H" width="100" alt="spotify">
+                        <p>Name Surname</p>
+                        <p>Position 8</p>
                     </td>
                 </tr>
             </tbody>
         </table>
         <iframe name="Frame" scrolling="no" 
-        style="width:150px; height:300px; float:left; border:ridge 2px; margin-bottom: 10px"
+        style="width:150px; height:300px; float:right; border:ridge 2px; margin-bottom: 10px"
         src = "index.html"></iframe>
     </main>
 </body>
