--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
         <br>
         <h2 style="font-family: 'Fredoka', sans-serif;"><center>The missions</center></h2>   
         <ul><font size="5" style="font-family: 'Fredoka', sans-serif;">
-            <li>Music can help you concentrate and work better</li>
-            <li>Singing dissolves stress excellently</li>
+            <li type="square">Music can help you concentrate and work better</li>
+            <li type="circle">Singing dissolves stress excellently</li>
             <li>Babies can listen to music inside the womb</li>
             <li>Music can give you a frisson</li>
             <li>Beats that keep your heartbeats healthy</li></font>
