Added header styles

--- a/about.html
+++ b/about.html
@@ -7,25 +7,28 @@
     <meta name="author" content="Savaryna Viktoriia IP-22">
     
     <link href="https://fonts.googleapis.com/css2?family=Fredoka" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body bgcolor ="#657166" link="lightgreen" vlink="lightblue" alink="pink">
+<body>
     <header>
-        <div>
-            <img src="images/logo.png" alt="logo">
-        </div>
-        <div>
-           <p><a href="index.html">Home</a></p>
-           <p><a href="about.html">About</a></p>
-           <p><a href="platforms.html">Platforms</a></p>
-           <p><a href="contact.html">Contact</a></p> 
-        </div>
+        <img src="images/logo.png" alt="logo" class="logo">
+        <nav>
+            <ul class="nav_links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html" class="active">About</a></li>
+                <li><a href="Platforms.html">Platforms</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul> 
+        </nav>
     </header>
     <main>
+        <dl>
         <dt><h1 style="font-family: 'Fredoka', sans-serif;"><center>About us</center></h1>   
         </dt>
         <dd style="font-family: 'Fredoka', sans-serif;" align="center">Can you imagine life without music? <br>It`s impossible! 
             Find out more about music in this website.<br>
             Have fun!</dd>
+        </dl>
         <br>
         <h2 style="font-family: 'Fredoka', sans-serif;"><center>The missions</center></h2>   
         <ul><font size="5" style="font-family: 'Fredoka', sans-serif;">
