--- a/contact.html
+++ b/contact.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <meta name="author" content="Savaryna Viktoriia IP-22">
+
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body bgcolor="#657160" link="lightgreen" vlink="lightblue" alink="pink">
+<body>
     <header>
-        <div>
-            <img src="images/logo.png" alt="logo">
-        </div>
-        <div>
-           <p><a href="index.html">Home</a></p>
-           <p><a href="about.html">About</a></p>
-           <p><a href="platforms.html">Platforms</a></p>
-           <p><a href="contact.html">Contact</a></p> 
-        </div>
+        <img src="images/logo.png" alt="logo" class="logo">
+        <nav>
+            <ul class="nav_links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="Platforms.html">Platforms</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
+            </ul> 
+        </nav>
     </header>
     <main>
         <table align="left" cellpadding = "25" cellspacing="15">
