--- a/platforms.html
+++ b/platforms.html
@@ -5,19 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Platforms</title>
     <meta name="author" content="Savaryna Viktoriia IP-22">
+
     <link href="https://fonts.googleapis.com/css2?family=Fredoka" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body bgcolor ="#657166" link="lightgreen" vlink="lightblue" alink="pink">
+<body>
     <header>
-        <div>
-            <img src="images/logo.png" alt="logo">
-        </div>
-        <div>
-           <p><a href="index.html">Home</a></p>
-           <p><a href="about.html">About</a></p>
-           <p><a href="platforms.html">Platforms</a></p>
-           <p><a href="contact.html">Contact</a></p> 
-        </div>
+        <img src="images/logo.png" alt="logo" class="logo">
+        <nav>
+            <ul class="nav_links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="Platforms.html" class="active">Platforms</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul> 
+        </nav>
     </header>
     <main>
         <a name="plats"><h1>Platforms</h1></a>
