--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
     <meta name="author" content="Savaryna Viktoriia IP-22">
 
     <link href="https://fonts.googleapis.com/css2?family=Fredoka" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body bgcolor ="#657166" link="lightgreen" vlink="lightblue" alink="pink">
+<body>
     <header>
-        <div>
-            <img src="images/logo.png" alt="logo">
-        </div>
-        <div>
-           <p><a href="index.html">Home</a></p>
-           <p><a href="about.html">About</a></p>
-           <p><a href="platforms.html">Platforms</a></p>
-           <p><a href="contact.html">Contact</a></p> 
-        </div>
+        <img src="images/logo.png" alt="logo" class="logo">
+        <nav>
+            <ul class="nav_links">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="Platforms.html">Platforms</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul> 
+        </nav>
     </header>
-    <main>
+    <!-- <main>
         <h1 style="font-family: 'Fredoka', sans-serif;"><b>Music</b></h1>
         <p style="font-family: 'Fredoka', sans-serif;"><u>
             Music is the art form that combines rhythm and sound to 
@@ -70,6 +71,6 @@
                 <li>Beats that keep your heartbeats healthy</li></font>
             </ol>
         </div>
-    </main>
+    </main> -->
 </body>
 </html>
