--- a/platforms.html
+++ b/platforms.html
@@ -16,7 +16,7 @@
             <ul class="nav_links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="Platforms.html" class="active">Platforms</a></li>
+                <li><a href="platforms.html" class="active">Platforms</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul> 
         </nav>
