--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             <ul class="nav_links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="Platforms.html">Platforms</a></li>
+                <li><a href="platforms.html">Platforms</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul> 
         </nav>
