--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="nav_links">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="Platforms.html">Platforms</a></li>
+                <li><a href="platforms.html">Platforms</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul> 
         </nav>
