Updated home page

--- a/index.html
+++ b/index.html
@@ -21,56 +21,80 @@
             </ul> 
         </nav>
     </header>
-    <!-- <main>
-        <h1 style="font-family: 'Fredoka', sans-serif;"><b>Music</b></h1>
-        <p style="font-family: 'Fredoka', sans-serif;"><u>
-            Music is the art form that combines rhythm and sound to 
-            form a functional melodic line. Music itself transcends 
-            time, space, and cultures. Music can carry a mood 
-            without speaking any specific words.</u>
-        </p>
-        <font color="white" size="3"><i>It can also be 
-            captured and recorded in a written universal
-            language unique unto any other art form.</i>
-        </font>
-        <a href="#music"><p>Read about facts</p></a>
-        <p>
-            <font size="5" align="center" style="font-family: 'Fredoka', sans-serif;"><center>Top genres</center>
-            </font>
-        </p>
-        <div>
-            <div>
-                <a href="https://i.scdn.co/image/ab67616d00001e0208f3e7a08eb03064e6eb0af7" target="_blank">
-                    <img src="https://i.scdn.co/image/ab67616d00001e0208f3e7a08eb03064e6eb0af7"
-                    width="25%" height="25%"></a>
-                <font size="5" style="font-family: 'Fredoka', sans-serif;"><p><b>Pop</b></p></font>
+    <img src="images/3.png" alt="photo" class="photo">
+    <section>
+        <h1 class="main_title">Music</h1>
+        <p class="main_text">Music is the art form that combines rhythm and sound to 
+            form a functional melodic line. Music itself transcends time, 
+            space, and cultures. Music can carry a mood without speaking 
+            any specific words. It can also be captured and recorded 
+        in a written universal language unique unto any other art form.</p>
+    </section>
+    <section>
+        <p class="empty"></p>
+    </section>
+    <section>
+        <h2 class="acent">Top genres</h2>
+        <div class="container">
+            <div class="cont">
+                <img src="https://i.scdn.co/image/ab67616d00001e0208f3e7a08eb03064e6eb0af7" alt="pop" class="top_img">
+                <h3 class="acent">Pop</h3>
+                <a href="https://open.spotify.com/playlist/3ZgmfR6lsnCwdffZUan8EA"><button>Listen</button></a>
             </div>
-            <div>
-                <a href="https://i.scdn.co/image/ab67616d0000b273548260cbdb078bfb1dca0681" target="_blank">
-                    <img src="https://i.scdn.co/image/ab67616d0000b273548260cbdb078bfb1dca0681"
-                    width="20%" height="20%"></a>
-                <font size="5" style="font-family: 'Fredoka', sans-serif;"><p><b>Rock</b></p></font>
+            <div class="cont">
+                <img src="https://i.scdn.co/image/ab67616d0000b2730f8a4150cb018ac22531c65c" alt="pop" class="top_img">
+                <h3 class="acent">Rock</h3>
+                <a href="https://open.spotify.com/playlist/37i9dQZF1DWXRqgorJj26U"><button>Listen</button></a>
             </div>
-            <div>
-                <a href="https://i.scdn.co/image/ab67706f000000020892a338216da10ae5a87e7b" target="_blank">
-                    <img src="https://i.scdn.co/image/ab67706f000000020892a338216da10ae5a87e7b"
-                    width="300" height="300"></a>
-                <font size="5" style="font-family: 'Fredoka', sans-serif;"><p><b>Hip Pop</b></p></font>
+            <div class="cont">
+                <img src="https://play-lh.googleusercontent.com/KjS2mK6nB8HsT51ylv-ZF7ny5DoU49qk-ibNKZCbix-MAFOeG_xZvFlhbgdv9iVXqkQ" alt="pop" class="top_img">
+                <h3 class="acent">Hip Pop</h3>
+                <a href="https://open.spotify.com/playlist/37i9dQZF1DX48TTZL62Yht"><button>Listen</button></a>
             </div>
         </div>
-        <div>
-            <p><a name="music">
-                <font size="5" align="center" color="white" style="font-family: 'Fredoka', sans-serif;"><center>Fascinating facts</center>
-                </font>
-            </a></p>
-            <ol><font size="5" style="font-family: 'Fredoka', sans-serif;" color="white">
-                <li type = "A">Music can help you concentrate and work better</li>
-                <li type = "a">Singing dissolves stress excellently</li>
-                <li type = "I">Babies can listen to music inside the womb</li>
-                <li type = "i">Music can give you a frisson</li>
-                <li>Beats that keep your heartbeats healthy</li></font>
-            </ol>
+    </section>
+    <section>
+        <div class="facts">
+            <h2 class="acent">Fascinating facts</h2>
+            <ul>
+                <li><span>1</span>Music can help you concentrate and work better</li>
+                <li><span>2</span>Singing dissolves stress excellently</li>
+                <li><span>3</span>Babies can listen to music inside the womb</li>
+                <li><span>4</span>Music can give you a frisson</li>
+                <li><span>5</span>Beats that keep your heartbeats healthy</li>
+            </ul>
         </div>
-    </main> -->
+    </section>
+    <section>
+        <h2 class="acent">Largest music festivals</h2>
+        <div class="container">
+            <div class="cont">
+                <img src="https://cdn11.bigcommerce.com/s-d7wmc7b75m/stencil/12c21480-b4cf-013c-1491-4a9e8de49ee2/e/da7768a0-a2bb-013c-5f1b-66106c2e6377/img/landing-pages/coachella-sweepstakes-mobi.jpg" alt="pop" class="top_img">
+                <h3 class="acent">Coachella</h3>
+                <p class="cont_text">Average attendance on Mainstage: 500`000</p>
+            </div>
+            <div class="cont">
+                <img src="https://i.pinimg.com/736x/38/f5/33/38f5330ce6ca0699c3c0060f0b4d494d.jpg" alt="pop" class="top_img">
+                <h3 class="acent">Tomorrowland</h3>
+                <p class="cont_text">Average attendance on Mainstage: 400`000</p>
+            </div>
+            <div class="cont">
+                <img src="https://applications-media.feverup.com/image/upload/f_auto,w_550,h_550/fever2/plan/photo/44e2d8dc-5d61-11ea-bf03-06551cb39bc6.jpg" alt="pop" class="top_img">
+                <h3 class="acent">Rock in Rio</h3>
+                <p class="cont_text">Average attendance on Mainstage: 385`000</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <img src="images/logo.png" alt="logo" class="logo">
+        <nav>
+            <ul class="nav_links">
+                <li>Social medias</li>
+                <li><a href="https://www.linkedin.com/in/viktoriia-savaryna"><img src="https://static-00.iconduck.com/assets.00/linkedin-with-circle-icon-2048x2048-np6yltn1.png" alt="ln" class="medias"></a></li>
+                <li><a href="https://github.com/viksiik"><img src="https://creazilla-store.fra1.digitaloceanspaces.com/icons/3271892/github-icon-md.png" alt="gh" class="medias"></a></li>
+                <li><a href="https://t.me/viksii_k"><img src="https://www.svgrepo.com/show/360837/telegram.svg" alt="tg" class="medias"></a></li>
+            </ul> 
+        </nav>
+    </footer>
 </body>
 </html>
