Updated about page

--- a/about.html
+++ b/about.html
@@ -21,24 +21,106 @@
             </ul> 
         </nav>
     </header>
-    <main>
+    <section>
         <dl>
-        <dt><h1 style="font-family: 'Fredoka', sans-serif;"><center>About us</center></h1>   
-        </dt>
-        <dd style="font-family: 'Fredoka', sans-serif;" align="center">Can you imagine life without music? <br>It`s impossible! 
-            Find out more about music in this website.<br>
-            Have fun!</dd>
+            <dt>
+                <h1 class="main_title_about">About us</h1>   
+            </dt>
+            <dd class="main_text_about">Can you imagine life without music? It`s impossible! 
+                <br>Find out more about music in this website.<br>
+                Have fun!</dd>
         </dl>
-        <br>
-        <h2 style="font-family: 'Fredoka', sans-serif;"><center>The missions</center></h2>   
-        <ul><font size="5" style="font-family: 'Fredoka', sans-serif;">
-            <li type="square">Music can help you concentrate and work better</li>
-            <li type="circle">Singing dissolves stress excellently</li>
-            <li>Babies can listen to music inside the womb</li>
-            <li>Music can give you a frisson</li>
-            <li>Beats that keep your heartbeats healthy</li></font>
-        </ul>
-    <a href="platforms.html#plats">Read about platforms</a>
-    </main>
+    </section>
+    <section>
+        <div class="missions">
+            <h2 class="acent">The missions</h2>  
+            <ol>
+                <li>Music can help you concentrate and work better</li>
+                <li>Singing dissolves stress excellently</li>
+                <li>Babies can listen to music inside the womb</li>
+                <li>Music can give you a frisson</li>
+                <li>Beats that keep your heartbeats healthy</li>
+            </ol>
+        </div>
+    </section> 
+    <section>
+        <div class="team_table">
+            <table cellpadding = "25" cellspacing="15">
+                <colgroup>
+                    <col style="width:auto"/><col/>
+                </colgroup>    
+                <thead>          
+                    <tr>
+                        <th colspan="4" class="head_name">Our team</th>
+                    </tr>
+                </thead> 
+                <tbody>
+                    <tr>
+                        <td colspan="4">
+                            <img src="https://cdn-icons-png.flaticon.com/256/3135/3135789.png" width="100" alt="spotify">
+                            <p>Name Surname</p>
+                            <p class="pos_text">Position</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="https://cdn-icons-png.flaticon.com/512/4140/4140071.png" width="100" alt="spotify">
+                            <p>Name Surname</p>
+                            <p class="pos_text">Position 1</p>
+                        </td>
+                        <td>
+                            <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSMuZEcYYN2YYO5WAmhmhwnSJo7JyPn5Q-eih8MdZnvGIAFXqS4" width="100" alt="spotify">
+                            <p>Name Surname</p>
+                            <p class="pos_text">Position 2</p>
+                        </td>
+                        <td>
+                            <img src="https://netsandturf.com/assets/images/team/user-1.png" width="100" alt="spotify">
+                            <p>Name Surname</p>
+                            <p class="pos_text">Position 3</p>
+                        </td>
+                        <td>
+                            <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcS02jOWrcM7KCYuEgESmP2P6rJq_O0i2Zqw0QDIdTKf3AmZWk1H" width="100" alt="spotify">
+                            <p>Name Surname</p>
+                            <p class="pos_text">Position 4</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="https://cdn-icons-png.flaticon.com/512/4140/4140071.png" width="100" alt="spotify">
+                            <p>Name Surname</p>
+                            <p class="pos_text">Position 5</p>
+                        </td>
+                        <td>
+                            <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSMuZEcYYN2YYO5WAmhmhwnSJo7JyPn5Q-eih8MdZnvGIAFXqS4" width="100" alt="spotify">
+                            <p>Name Surname</p>
+                            <p class="pos_text">Position 6</p>
+                        </td>
+                        <td>
+                            <img src="https://netsandturf.com/assets/images/team/user-1.png" width="100" alt="spotify">
+                            <p>Name Surname</p>
+                            <p class="pos_text">Position 7</p>
+                        </td>
+                        <td>
+                            <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcS02jOWrcM7KCYuEgESmP2P6rJq_O0i2Zqw0QDIdTKf3AmZWk1H" width="100" alt="spotify">
+                            <p>Name Surname</p>
+                            <p class="pos_text">Position 8</p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+
+    <footer>
+        <img src="images/logo.png" alt="logo" class="logo">
+        <nav>
+            <ul class="nav_links">
+                <li>Social medias</li>
+                <li><a href="https://www.linkedin.com/in/viktoriia-savaryna"><img src="https://static-00.iconduck.com/assets.00/linkedin-with-circle-icon-2048x2048-np6yltn1.png" alt="ln" class="medias"></a></li>
+                <li><a href="https://github.com/viksiik"><img src="https://creazilla-store.fra1.digitaloceanspaces.com/icons/3271892/github-icon-md.png" alt="gh" class="medias"></a></li>
+                <li><a href="https://t.me/viksii_k"><img src="https://www.svgrepo.com/show/360837/telegram.svg" alt="tg" class="medias"></a></li>
+            </ul> 
+        </nav>
+    </footer>
 </body>
 </html>
