Corrected some info

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
         <img src="images/logo.png" alt="logo" class="logo">
         <nav>
             <ul class="nav_links">
-                <li>Social medias</li>
+                <li>Social media</li>
                 <li><a href="https://www.linkedin.com/in/viktoriia-savaryna"><img src="https://static-00.iconduck.com/assets.00/linkedin-with-circle-icon-2048x2048-np6yltn1.png" alt="ln" class="medias"></a></li>
                 <li><a href="https://github.com/viksiik"><img src="https://creazilla-store.fra1.digitaloceanspaces.com/icons/3271892/github-icon-md.png" alt="gh" class="medias"></a></li>
                 <li><a href="https://t.me/viksii_k"><img src="https://www.svgrepo.com/show/360837/telegram.svg" alt="tg" class="medias"></a></li>
