Added platform page

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <section>
         <dl>
             <dt>
-                <h1 class="main_title_about">About us</h1>   
+                <h1 class="main_subtitle">About us</h1>   
             </dt>
             <dd class="main_text_about">Can you imagine life without music? It`s impossible! 
                 <br>Find out more about music in this website.<br>
