--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
 
     <main>
         <iframe name="Frame" scrolling="no" 
-        style="width:150px; height:300px; float:right; border:ridge 2px; margin-bottom: 10px"
+        style="width:850px; height:100px; float:left; border:ridge 2px; margin-bottom: 10px; margin-top: 24px"
         src = "index.html"></iframe>
     </main>
 </body>
