--- a/contact.html
+++ b/contact.html
@@ -80,9 +80,7 @@
     </section>
 
     <main>
-        <iframe name="Frame" scrolling="no" 
-        style="width:850px; height:100px; float:left; border:ridge 2px; margin-bottom: 10px; margin-top: 24px"
-        src = "index.html"></iframe>
+        <iframe name="Frame" scrolling="no" src = "thanks.html" id="frame"></iframe>
     </main>
 </body>
 </html>
