Added some selectors

--- a/platforms.html
+++ b/platforms.html
@@ -32,7 +32,7 @@
             </ul> 
         </nav>
     </header>
-    <section>
+    <section id="main_section">
         <h1 class="main_subtitle">Platforms</h1>
         <p class="main_subtext">
             A type of streaming media service that focuses primarily on music, 
@@ -74,8 +74,8 @@
     </section>
     <section>
         <h1 class="subtitle">*****</h1>
-        <h1 class="subtitle">“A great song should lift your heart, warm the soul 
-            and make you feel good.” ― Colbie Caillat</h1>
+        <h1 class="subtitle">“A <em>great song</em> should lift your heart, warm the soul 
+            and make you <i>feel good</i>” ― Colbie Caillat</h1>
         <h1 class="subtitle">*****</h1>
     </section>
     <footer>
