--- a/about.html
+++ b/about.html
@@ -21,14 +21,14 @@
             </ul> 
         </nav>
     </header>
-    <section>
+    <section id="main_section">
         <dl>
             <dt>
                 <h1 class="main_subtitle">About us</h1>   
             </dt>
             <dd class="main_text_about">Can you imagine life without music? It`s impossible! 
                 <br>Find out more about music in this website.<br>
-                Have fun!</dd>
+                <i>Have fun!</i></dd>
         </dl>
     </section>
     <section>
