--- a/index.html
+++ b/index.html
@@ -143,5 +143,14 @@
             </ul> 
         </nav>
     </footer>
+    <button id="Game">Play game</button>
+    <script>
+        function redirection() {
+            location.href = "game.html"; 
+        }
+        let redirectionBtn = document.getElementById("Game");
+
+        redirectionBtn.onclick = redirection;
+    </script>
 </body>
 </html>
